@@ -62,7 +62,7 @@
 		<option id="LastSvnCheck" type="float" default="0"/>
 	</options>
 	
-	<event type="gameUpdate" module="BugUtil" function="onGameUpdate"/> 
+	<event type="gameUpdate" module="BugUtil" function="doDeferredCalls"/> 
 	
 	<init module="BugUtil" function="readLoggingOptions" immediate="true"/>
     <init module="BugDll" immediate="true"/>
